Fix problem with tmux ssh terminal colors

--- a/tmux.conf
+++ b/tmux.conf
@@ -40,4 +40,4 @@ if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
 
                       
 # required for true color in vim to show
-set -as terminal-features ",xterm-256:RGB"
+set -as terminal-features ",xterm-256:Tc:RGB"
