Fix mistake in tmux conf

--- a/home/common/cli-core/tmux.conf
+++ b/home/common/cli-core/tmux.conf
@@ -62,4 +62,4 @@ bind-key -T root WheelDownPane \
 
 # the #T is the current hostname, this is useful so I can quickly see what 
 # machine a session is on.
-set status-right "%H:%M %d-%b-%y [#h]"
+set -g status-right "%H:%M %d-%b-%y [#h]"
