Fix issues with tcg

--- a/pkgs/cg-tmux.conf
+++ b/pkgs/cg-tmux.conf
@@ -2,10 +2,10 @@ set-option -g status-position top
 
 unbind Tab
 set -g prefix Tab
-bind Tab last-window
+# bind Tab last-window
 
-bind-key -n l next-window
-bind-key -n h last-window
+bind l next-window
+bind h last-window
 
 set -g mouse on
 
